Closed
Bug 220195
Opened 22 years ago
Closed 22 years ago
scrollbars in iframes even if it has been disabled by attribute scrolling="no" and css-attribute overflow:none
Categories
(Core :: Layout: Images, Video, and HTML Frames, defect, P2)
Core
Layout: Images, Video, and HTML Frames
Tracking
()
RESOLVED
FIXED
mozilla1.6alpha
People
(Reporter: bjoern, Assigned: dbaron)
References
()
Details
(Keywords: regression, testcase, Whiteboard: [patch])
Attachments
(4 files)
|
485 bytes,
text/html
|
Details | |
|
16.62 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
|
2.36 KB,
text/html;charset=UTF-8
|
Details | |
|
2.35 KB,
text/html;charset=UTF-8
|
Details |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6a) Gecko/20030923 Firebird/0.7+
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6a) Gecko/20030923 Firebird/0.7+
On lauschmusik.de you can see many iframes.
With Firebird 0.6.1 there aren't any layout-problems with iframes and disabled
scrollbars but Firebird 0.7+ shows it.
Reproducible: Always
Steps to Reproduce:
1. Look at lauschmusik.de with Firebird 0.6.1
2. Use the Iframes
3. Look at lauschmusik.de with Firebird 0.7+
4. There are Scrollbars which should not be there.
Actual Results:
Firebird shows scrollbars
Expected Results:
Hide the scrollbars
Comment 1•22 years ago
|
||
I can reproduce this in 20030923 builds of Firebird (0.7+) and Mozilla (1.6a
trunk) on WinXP.
Comment 2•22 years ago
|
||
Comment 3•22 years ago
|
||
Confirming bug, 2003-09-23-05 trunk Linux
Mozilla 1.5RC1 works fine so I'm guessing it's a regression from bug 69355
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression,
testcase
OS: Windows 2000 → All
Summary: firebird 0.7+ shows scrollbars in iframes even if it has been disabled by attribute scrolling="no" and css-attribute overflow:none → scrollbars in iframes even if it has been disabled by attribute scrolling="no" and css-attribute overflow:none
| Assignee | ||
Comment 4•22 years ago
|
||
The problem here is that nsHTMLFrameInnerFrame::GetScrolling depended on the
default value of 'overflow' being the constant 0.
| Assignee | ||
Comment 5•22 years ago
|
||
Er, no, that's not quite right.
| Assignee | ||
Comment 6•22 years ago
|
||
| Assignee | ||
Comment 7•22 years ago
|
||
taking.
Assignee: frame → dbaron
Priority: -- → P2
Hardware: PC → All
Whiteboard: [patch]
Target Milestone: --- → mozilla1.6alpha
| Assignee | ||
Updated•22 years ago
|
Attachment #132108 -
Flags: superreview?(bzbarsky)
Attachment #132108 -
Flags: review?(bzbarsky)
| Assignee | ||
Comment 8•22 years ago
|
||
| Assignee | ||
Comment 9•22 years ago
|
||
Maybe it's not worth making -moz-scrollbars-vertical /
-moz-scrollbars-horizontal do that since ConstructRootFrame doesn't transfer
that information to the scrollbars in any way...
| Assignee | ||
Comment 10•22 years ago
|
||
Comment 11•22 years ago
|
||
Comment on attachment 132108 [details] [diff] [review]
patch
>Index: content/html/content/src/nsGenericHTMLElement.cpp
>+nsGenericHTMLElement::MapScrollingAttributeInto
....
>+ // bgcolor
This comment seems out of place.
>+ PRInt32 mappedValue;
This will lead to a "may be used uninitialized" warning because of the default:
case. Not sure how much we care about that, really.
r+sr=bzbarsky with the first of those two nits picked (I really don't care
about the second one).
Attachment #132108 -
Flags: superreview?(bzbarsky)
Attachment #132108 -
Flags: superreview+
Attachment #132108 -
Flags: review?(bzbarsky)
Attachment #132108 -
Flags: review+
| Assignee | ||
Comment 12•22 years ago
|
||
Fix checked in to trunk, 2003-09-24 20:55 -0700. (Both problems fixed.)
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 13•22 years ago
|
||
sorry for that but as for me it seems not to be fixed.
the css-attribute "overflow" is still ignored.
so if you add the tag-attribute "scrolling=no" AND the
css-attribute "overflow:hidden" the css-style overrides the
tag-attribute (right behaviour) but does _not_ behave
right with displaying these bars ;)
(as i tested this morning firebird recognizes the css-overflow
parameter "noscroll" and hides the scrollbars. but this param
isn't w3c-compliant. seems that the browser matches this css-overflow-values
against tag-attribute-values?)
i tried the latest trunk which should have been fixed:
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6a) Gecko/20030924
Firebird/0.7+
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 14•22 years ago
|
||
A build from the 24th would not have the fix.
scrolling="no" and 'overflow:hidden' should have the same effect. If you still
have a problem then please attach a testcase when you reopen the bug.
Status: REOPENED → RESOLVED
Closed: 22 years ago → 22 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
Updated•7 years ago
|
Component: Layout: HTML Frames → Layout: Images
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•